--- a/src/components/ui/form-spinbutton/FormSpinbutton.scss
+++ b/src/components/ui/form-spinbutton/FormSpinbutton.scss
@@ -2,15 +2,12 @@
 
 .ui-form-spinbutton {
 	@include form-control;
+	border: none;
 	padding-left: 0;
 	padding-right: 0;
 	align-items: stretch;
 
 	&-action {
-		&:hover {
-			color: var(--s-color-content-highlight);
-		}
-
 		.ui-button-label {
 			display: flex;
 			align-items: center;
@@ -18,12 +15,16 @@
 	}
 
 	&.-disabled {
+		cursor: not-allowed;
 		background-color: var(--s-color-fill-disable);
-		border: var(--s-border-light);
 		border-color: var(--s-color-border-disable);
 
-		&-action {
-			border: none;
+		.output {
+			border-color: var(--s-color-border-disable);
+
+			input {
+				color: var(--s-color-content-disable);
+			}
 		}
 	}
 
@@ -40,6 +41,7 @@
 	}
 
 	.output {
+		border: var(--s-border-light);
 		flex-grow: 1;
 		text-align: center;
 		border-right: 0;
@@ -48,7 +50,9 @@
 		align-items: center;
 		width: 100%;
 		font: var(--s-typography-paragraph-regular);
+
 		input {
+			color: var(--s-color-content-default);
 			appearance: none;
 			box-shadow: none;
 			border: none;
@@ -60,10 +64,11 @@
 	}
 
 	.ui-form-spinbutton-loader {
+		border: var(--s-border-light);
 		position: absolute;
 		z-index: var(--s-index-max);
 		background-color: var(--s-color-background-default);
-		opacity: 0.8;
+		opacity: 1;
 		width: 100%;
 		height: 100%;
 		border-radius: inherit;
@@ -72,31 +77,34 @@
 		justify-content: center;
 	}
 
-	@include darkmode {
-		border-color: var(--s-color-border-dark);
-		background-color: var(--s-color-fill-dark);
-
-		.output {
-			background-color: var(--s-color-fill-dark);
-			border: none;
-
-			> input {
-				color: var(--s-color-content-dark);
-			}
-		}
-	}
-
-	&-action {
-		border: unset;
+	&-action-decrease {
 		background-color: transparent;
-
-		&:hover {
-			color: var(--s-color-content-highlight);
-		}
+		border-top-left-radius: 4px;
+		border-top-right-radius: 0;
+		border-bottom-left-radius: 4px;
+		border-bottom-right-radius: 0;
 
 		.ui-button-label {
 			display: flex;
 			align-items: center;
 		}
 	}
+
+	&-action-increase {
+		background-color: transparent;
+		border-top-left-radius: 0;
+		border-top-right-radius: 4px;
+		border-bottom-left-radius: 0;
+		border-bottom-right-radius: 4px;
+
+		.ui-button-label {
+			display: flex;
+			align-items: center;
+		}
+	}
+}
+
+.ui-button:disabled,
+.ui-button.-disabled {
+	border-color: var(--s-color-border-disable);
 }
