--- a/src/components/ui/form-wrapper/FormWrapper.scss
+++ b/src/components/ui/form-wrapper/FormWrapper.scss
@@ -99,12 +99,6 @@
 		.form-wrapper-content-bx {
 			color: var(--s-color-content-disable);
 			background-color: var(--s-color-fill-disable);
-
-			@include darkmode {
-				color: var(--s-color-content-dark-disable);
-				background-color: var(--s-color-fill-dark-disable);
-				border: 1px solid var(--s-color-border-default);
-			}
 		}
 
 		.form-control.-select {
@@ -245,10 +239,10 @@
 	}
 
 	.form-control:focus {
-		~ .form-wrapper-notched {
+		~.form-wrapper-notched {
 			border-color: var(--s-color-border-highlight);
 
-			> div {
+			>div {
 				border-width: 2px;
 			}
 
@@ -262,7 +256,7 @@
 	input:not(:placeholder-shown),
 	select:not(:placeholder-shown),
 	textarea:not(:placeholder-shown) {
-		~ .form-wrapper-notched {
+		~.form-wrapper-notched {
 			.form-wrapper-notched-label {
 				border-top: none;
 			}
@@ -277,12 +271,12 @@
 		}
 	}
 
-	> .form-wrapper-label {
+	>.form-wrapper-label {
 		position: relative;
 		display: flex;
 		align-items: center;
 
-		> .form-wrapper-label-icon {
+		>.form-wrapper-label-icon {
 			display: inline-flex;
 			align-items: center;
 			margin-left: var(--s-spacing-quark);
@@ -300,8 +294,8 @@
 			margin-top: var(--s-spacing-x-small);
 			padding-top: 0;
 
-			~ .form-wrapper-notched .form-wrapper-notched-label {
-				> label {
+			~.form-wrapper-notched .form-wrapper-notched-label {
+				>label {
 					transform: translateY(-50%);
 				}
 			}
@@ -310,6 +304,7 @@
 
 	&.-invalid {
 		&:not(.-disabled) {
+
 			.form-control,
 			.form-wrapper-notched {
 				border-color: var(--s-color-border-critical);
@@ -318,13 +313,14 @@
 			label,
 			i,
 			input {
-				color: var(--s-color-fill-critical);
+				color: var(--s-color-content-critical);
 			}
 		}
 	}
 
 	&.-valid {
 		&:not(.-disabled) {
+
 			.form-control,
 			.form-wrapper-notched {
 				border-color: var(--s-color-border-success);
