--- a/src/scss/tokens/semantic/colors.scss
+++ b/src/scss/tokens/semantic/colors.scss
@@ -71,8 +71,8 @@ $semantic-color: (
 		success: tokens.getPrimitiveVar($primitives-color, green, 600),
 		warning: tokens.getPrimitiveVar($primitives-color, orange, 600),
 		critical: tokens.getPrimitiveVar($primitives-color, red, 600),
-		dark: tokens.getPrimitiveVar($primitives-color, neutral, 700),
-		dark-disable: tokens.getPrimitiveVar($primitives-color, neutral, 800),
+		dark: tokens.getPrimitiveVar($primitives-color, neutral, 600),
+		dark-disable: tokens.getPrimitiveVar($primitives-color, neutral, 700),
 		dark-highlight: var(--b-color-medium),
 		dark-success: tokens.getPrimitiveVar($primitives-color, green, 500),
 		dark-warning: tokens.getPrimitiveVar($primitives-color, orange, 500),
